<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="15dp"
    android:elevation="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/airportnameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/airport_name"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/flightTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/app_name"
            android:layout_below="@id/airportnameTxt"
            android:textSize="14sp"
            android:fontFamily="@font/allerta"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:letterSpacing=".1"
            />
        <TextView
            android:id="@+id/airportCodeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/flightTitle"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/airport_code"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/airportCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/airportCodeTxt"
            android:layout_below="@id/flightTitle"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            android:letterSpacing=".2"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/checkStatusBtn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_below="@id/airportCode"
            android:layout_marginTop="15dp"
            android:text="@string/check_status"
            android:textColor="@color/white"
            android:padding="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:background="@drawable/search_back"
            android:fontFamily="@font/allerta"
            android:textStyle="bold"
            />
    </RelativeLayout>
</androidx.cardview.widget.CardView>