<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:elevation="10dp"
    android:layout_marginTop="8dp"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/imgCard"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >
            <ImageView
                android:id="@+id/thumbImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/YtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/imgCard"
            android:text="@string/track_flight_flight_id"
            android:fontFamily="@font/poppins_bold"
            android:textSize="14sp"
            android:textColor="#9F000000"
            android:layout_marginEnd="8dp"
            />
        <TextView
            android:id="@+id/YtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/YtTitle"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/imgCard"
            android:maxLines="3"
            android:textSize="12sp"
            android:fontFamily="@font/raleway_medium_italic"
            android:text="@string/aiport_list_desc"
            android:layout_marginEnd="8dp"
            android:textColor="#7F000000"
            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>