<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="10dp"
    android:elevation="10dp"
    app:cardCornerRadius="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/flightTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_txt"
            android:fontFamily="@font/allerta"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/flightNoEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/flightTxt"
            android:layout_marginStart="8dp"
            android:layout_marginTop="13dp"
            android:text="@string/flight_videos"
            android:textSize="12sp"
            android:textColor="@color/teal_700"
            android:fontFamily="sans-serif"
            android:letterSpacing=".2"
            />
        <TextView
            android:id="@+id/fromTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:fontFamily="@font/allerta"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_below="@id/flightTxt"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/fromEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/fromTxt"
            android:layout_below="@id/flightTxt"
            android:layout_marginStart="8dp"
            android:layout_marginTop="13dp"
            android:text="@string/flight_videos"
            android:textSize="12sp"
            android:textColor="@color/teal_700"
            android:fontFamily="sans-serif"
            android:letterSpacing=".2"
            />
        <TextView
            android:id="@+id/AirlineTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/airline"
            android:fontFamily="@font/allerta"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_below="@id/fromTxt"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/AirlineEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/AirlineTxt"
            android:layout_below="@id/fromTxt"
            android:layout_marginStart="8dp"
            android:layout_marginTop="13dp"
            android:text="@string/flight_videos"
            android:textSize="12sp"
            android:textColor="@color/teal_700"
            android:fontFamily="sans-serif"
            android:letterSpacing=".2"
            />
        <TextView
            android:id="@+id/scheduleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule"
            android:fontFamily="@font/allerta"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_below="@id/AirlineTxt"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/scheduleEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/scheduleTxt"
            android:layout_below="@id/AirlineTxt"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:textSize="12sp"
            android:textColor="@color/flat_red_1"
            android:fontFamily="monospace"
            />
        <TextView
            android:id="@+id/ArrivalTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival"
            android:fontFamily="@font/allerta"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_below="@id/AirlineTxt"
            android:layout_toEndOf="@id/scheduleEdit"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            />
        <TextView
            android:id="@+id/ArrivalEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ArrivalTxt"
            android:layout_below="@id/AirlineTxt"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:textSize="12sp"
            android:textColor="@color/flat_red_1"
            android:fontFamily="monospace"
            />
        <RelativeLayout
            android:id="@+id/statusLay"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:background="@color/teal_700"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ArrivalTxt"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:id="@+id/flightStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/flight_videos"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:textSize="15sp"
                />
        </RelativeLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>