<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:elevation="10dp"
    android:padding="10dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="15dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imgCard"
            app:cardCornerRadius="15dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:elevation="10dp"
            >
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/aiport_list_desc"
                android:scaleType="fitXY"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/hName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgCard"
            android:layout_marginTop="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/poppins_bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/app_name"
            />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hName"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/aiport_list_desc"
            android:textSize="14sp"
            android:fontFamily="@font/allerta"
            android:textColor="#020202"
            />
        <TextView
            android:id="@+id/loactH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/desc"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/location_of_the_airport"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loactH"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/raleway_medium_italic"
            android:textSize="12sp"
            android:textColor="#454545"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            />
    </RelativeLayout>
</androidx.cardview.widget.CardView>