<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/headLay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_bold"
            android:letterSpacing=".2"
            android:text="@string/mr_flight"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headLay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:paddingBottom="50dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/carouselCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:elevation="10dp"
                app:cardCornerRadius="15dp">

                <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                    android:id="@+id/carousel"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    app:autoPlay="true"
                    app:autoPlayDelay="5000"
                    app:autoWidthFixing="true"
                    app:captionMargin="0dp"
                    app:captionTextSize="12sp"
                    app:carouselBackground="#80ffffff"
                    app:carouselType="BLOCK"
                    app:imagePlaceholder="@drawable/progress_img"
                    app:imageScaleType="fitXY"
                    app:imageViewId="@id/img"
                    app:indicatorMargin="0dp"
                    app:itemLayout="@layout/item_carousel"
                    app:scaleOnScroll="false"
                    app:scalingFactor="0.15"
                    app:showCaption="true"
                    app:showIndicator="true" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/airportLay"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/carouselCard"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/homecard_back"
                android:elevation="8dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/h1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/airports_in_the_world"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/raleway_medium_italic"
                    android:text="@string/aiport_list_desc"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/flightLay"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/airportLay"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/flight_card_back"
                android:elevation="8dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/h2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/list_of_flights_in_the_world"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/raleway_medium_italic"
                    android:text="@string/flight_list_desc"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <com.tbuonomo.morphbottomnavigation.MorphBottomNavigationView
        android:id="@+id/bottomNavigationView"
        style="@style/BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/white"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/nav_menu"
        app:morphCornerRadius="128dp"
        app:morphItemRadius="64dp"
        app:morphVerticalOffset="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
